--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "license": "https://www.colu.co/TOS",
   "homepage": "https://colu.co",
   "dependencies": {
-    "request": "^2.67.0"
+    "request": "^2.61.0",
   },
   "devDependencies": {
     "istanbul": "^0.3.22",
